--- a/sunny.html
+++ b/sunny.html
@@ -9,7 +9,7 @@
 <body>
     <header>
       <nav>
-          <img src="/images/logo.svg" alt="">
+          <img src="./images/logo.svg" alt="logo">
          <ul class="menu">
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
@@ -61,21 +61,21 @@
            </div>
              <div class="name">
                  <div class="emily">
-                <img src="/images/image-emily.jpg" alt=""> 
+                <img src="./images/image-emily.jpg" alt=""> 
                 <P> We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</P>
                 <h3> Emily R.</h3>
                 <h5>Marketing Director</h5>
              </div>
 
                <div class="emily">
-                   <img src="/images/image-thomas.jpg" alt="">
+                   <img src="./images/image-thomas.jpg" alt="">
                     <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
                    <h3>Thomas S.</h3>
                    <h5> Chief Operating Officer</h5>
                </div>
 
              <div class="emily">
-               <img src="/images/image-jennie.jpg" alt="">
+               <img src="./images/image-jennie.jpg" alt="">
                <p> Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
                <h3>Jennie F.</h3>
                <h5> Business Owner</h5> 
